...
    <string name="age_restriction_unknown">Age restriction not provided</string>
    <string name="age_years_placeholder">E.g. 4</string>
    <string name="applied_label">Applied</string>
    <string name="attendance_input_error">Select a supported location or access option from the suggestions.</string>
    <string name="attendance_label">Location or access</string>
    <string name="attendance_mode_detail_format">%1$s: %2$s</string>
    <string name="attendance_online">Online</string>
    <string name="attendance_options_label">Attend</string>
    <string name="attendance_place_address_format">%1$s, %2$s</string>
    <string name="attendance_placeholder">Type a location, Online, or TV</string>
    <string name="attendance_required_error">Select a location or access option to show results.</string>
    <string name="attendance_required_label">Location or access (required)</string>
    <string name="attendance_television">TV</string>
    <string name="app_name">Local Events</string>
    <string name="app_name_beta">Local Events - Beta</string>
    <string name="app_name_dev">Local Events - Dev</string>
    <string name="app_name_stage">Local Events - Stage</string>
    <string name="apply">Apply</string>
    <string name="any_category">Any category</string>
...
